// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files 1`] = `
Array [
  "endpoints.ts",
  "error.form-group-fac.ts",
  "error.model.ts",
  "error.properties.ts",
  "index.ts",
  "pet.form-group-fac.ts",
  "pet.model.ts",
  "pet.properties.ts",
  "pets.model.ts",
]
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  pets = '/pets',
  pets2 = '/pets/{petId}',
}
export interface IEndpoints {
  readonly pets: string;
  readonly pets2: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ErrorFormGroupFac(): FormGroup {
  return new FormGroup({
    code: new FormControl<number>(0, { validators: Validators.required, nonNullable: true } ),
    message: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IError {
  code?: number;
  message?: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ErrorProperties {
  CODE = 'code',
  MESSAGE = 'message',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './error.form-group-fac';
export * from './error.model';
export * from './error.properties';
export * from './pet.form-group-fac';
export * from './pet.model';
export * from './pet.properties';
export * from './pets.model';
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function PetFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<number | null>(null),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    tag: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IPet {
  id?: number;
  name?: string;
  tag?: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum PetProperties {
  ID = 'id',
  NAME = 'name',
  TAG = 'tag',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pets.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IPets {
}
"
`;
